@@ -9,7 +9,6 @@ import './resources/css/chat-section.css'
 const root = createRoot(document.getElementById('root'))
 root.render(<Home />)
 
-// Defer loading legacy scripts to the next frame so React can commit DOM
 requestAnimationFrame(() => {
   import('./resources/js/script.js').catch(() => {})
 })
