@@ -298,9 +298,9 @@
 .message.user {
   align-self: flex-end;
   background:
-    linear-gradient(180deg, rgba(0, 204, 255, 0.22), rgba(0, 255, 204, 0.12));
-  color: #ffffff;
-  border: 1px solid rgba(0, 255, 204, 0.18);
+    linear-gradient(180deg, rgb(0, 255, 170), rgb(0, 117, 86));
+  color: black;
+  font-weight: 600;
   border-top-right-radius: 6px;
   border-top-left-radius: 16px;
   border-bottom-left-radius: 16px;
@@ -320,7 +320,7 @@
   display: flex;
   gap: 8px;
   padding: 12px;
-  border-top: 1px solid rgba(0, 255, 204, 0.03);
+  border-top: 1px solid rgba(0, 0, 0, 0.03);
   background: rgba(0,0,0,0.28);
   align-items: center;
 }
@@ -329,8 +329,8 @@
   flex: 1;
   padding: 10px 12px;
   border-radius: 10px;
-  border: 1px solid rgba(255,255,255,0.04);
-  background: rgba(15,15,15,0.6);
+  border: 1px solid rgba(255, 0, 0, 0.04);
+  background: rgba(31, 31, 31, 0.6);
   color: #fff;
   font-size: 0.95rem;
   outline: none;
